# Wakfu-Calculateur-de-d-gats

./: .gitignore  Build_Release_Zip.bat  Cargo.toml  Update_launch.bat  config_path.txt  config_v2.json  script ok.txt
save/: main.rs  main_old.rs  model.rs  persistence.rs  view.rs
src/: degats_directs.rs  degats_indirects.rs  degats_invocations.rs  invocations.rs  main.rs  model.rs  parser.rs  tab_aide.rs  tab_archivage.rs  tab_combats.rs  tab_settings.rs  tab_stats.rs  view.rs
